<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Locator</string>
    <string name="action_settings">Settings</string>
    <string name="latitude_label">Latitude: </string>
    <string name="longitude_label">Longitude: </string>
    <string name="start_updates">Start updates</string>
    <string name="stop_updates">Stop updates</string>
    <string name="last_update_time_label">Last location update time: </string>
    <string name="location_updated_message">Location updated</string>
    <string name="full_name">Full Name</string>
    <string name="logo_image">Logo image</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register_here">New to Locator? Register here</string>
    <string name="error_invalid_email">Invalid Email.</string>
    <string name="error_blank_pass">Password can not be empty.</string>
    <string name="login_successful">Login successful.</string>
    <string name="incorrect_password">Password is not correct, please try again.</string>
    <string name="error">Sorry, an error has occurred, please try again.</string>
    <string name="register">No such user exists. Try register.</string>
    <string name="register_new_account">Register New Account</string>
    <string name="already_registered">Already has account! Login here</string>
    <string name="try_login">Already has account! Try Login.</string>
    <string name="registration_successful">Registration successful. Login to your account.</string>

</resources>